scrollbar fix

--- a/toldi/css/custom.css
+++ b/toldi/css/custom.css
@@ -2,8 +2,8 @@ html{
   scrollbar-width: thin;
   background-color: rgb(255, 255, 255);
   scroll-behavior: auto;
-  border-radius: 22px;/* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2948ff, #396afc);
+/*   border-radius: 22px;/* Chrome 10-25, Safari 5.1-6 */
+  /* background: linear-gradient(to right, #2948ff, #396afc); */
 }
 body {
   background: rgb(255, 255, 255);
@@ -44,7 +44,7 @@ h4 {
   font-family: "Poppins", sans-serif;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 7px;
   background-color: rgb(48, 7, 82);
   scroll-behavior: smooth;
@@ -52,13 +52,13 @@ h4 {
 ::-webkit-scrollbar-thumb {
   border-radius: 22px;
   background: #396afc; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
+/*   background: -webkit-linear-gradient(
     to right,
     #2948ff,
     #396afc
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2948ff, #396afc);
-}
+  ); /* Chrome 10-25, Safari 5.1-6 */ */
+/*   background: linear-gradient(to right, #2948ff, #396afc);
+}  */
 
  #hero-section {
   background-color: transparent;
